# Azure-ChatGPT

./: README.md
backend/: .env  main.py  pyproject.toml  requirements.txt
backend/src/config/: settings.py  vault_client.py
backend/src/models/: chat_models.py
backend/src/routes/: custom_search_route.py  global_search_route.py  image_generator_route.py
backend/src/utils/: azure_util.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatWindow.tsx  MessageBubble.tsx  ModeSelector.tsx
frontend/src/services/: chatService.ts
frontend/src/types/: index.ts
