[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-core>=1.36.0",
    "azure-identity>=1.25.3",
    "azure-keyvault-secrets>=4.11.0",
    "azure-search-documents>=11.6.0",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
]
